# paramsemble-regress

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.kiro/specs/elm-package/: design.md  requirements.md  tasks.md
.kiro/steering/: test-automation.md  windows-cmd-only.md
examples/: QUICKSTART.md  README.md  paramsemble_advanced_examples.ipynb  paramsemble_basic_usage.ipynb  test_notebooks.py
paramsemble/: __init__.py  _version.py  baseline.py  constituent.py  ensemble.py  estimator.py  feature_generation.py  metrics.py  scoring.py  selection.py  serialization.py  sql_export.py  utils.py
paramsemble/tests/: __init__.py  test_baseline.py  test_constituent.py  test_ensemble.py  test_error_handling.py  test_estimator.py  test_feature_generation.py  test_integration.py  test_metrics.py  test_properties.py  test_scoring.py  test_selection.py  test_serialization.py  test_sql_export.py
